--- a/construction-web/assets/css/style.css
+++ b/construction-web/assets/css/style.css
@@ -139,8 +139,9 @@ img {
   width: 100%;
   top: 0;
   left: 0;
-  background-color: var(--black-color);
+  background-color: transparent;
   z-index: var(--z-fixed);
+  transition: background-color 0.4s;
 }
 
 .nav {
@@ -214,12 +215,108 @@ img {
 }
 
 /* show menu */
+.show-menu {
+  right: 0;
+}
 
 /* change background header */
+.bg-header {
+  background-color: var(--body-color);
+  box-shadow: 0 4px 16px hsla(255, 90%, 8%, 0.1);
+}
+
+.bg-header .nav_logo span,
+.bg-header .nav_toggle {
+  color: var(--title-color);
+}
 
 /* Active links */
 
 /* ============ Home ============ */
+.home {
+  position: relative;
+  background-color: var(--black-color);
+}
+
+.home_container {
+  position: relative;
+  row-gap: 3rem;
+  padding-block: 2.5rem 6rem;
+}
+
+.home_content {
+  row-gap: 2.5rem;
+}
+
+.home_data {
+  text-align: center;
+}
+
+.home_title {
+  color: var(--white-color);
+  font-size: var(--big-font-size);
+  font-weight: var(--font-bold);
+  margin-bottom: 1rem;
+}
+
+.home_description {
+  margin-bottom: 2.5rem;
+  color: var(--text-color-light);
+}
+
+.home_buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.home_info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 4.5rem;
+}
+
+.home_info-title {
+  color: var(--second-color);
+  font-size: var(--big-font-size);
+  font-weight: var(--font-bold);
+  margin-bottom: 0.5rem;
+}
+
+.home_info-description {
+  font-size: var(--small-font-size);
+  color: var(--white-color);
+}
+
+.home_images {
+  position: relative;
+  justify-self: center;
+}
+
+.home_img-1 {
+  width: 250px;
+  margin-left: 3.5rem;
+}
+
+.home_img-2 {
+  width: 150px;
+  border: 5px solid var(--black-color);
+  position: absolute;
+  left: 0;
+  bottom: -3.5rem;
+}
+
+.home_lines {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: right;
+}
 
 /* ============ button ============ */
 .button {
@@ -234,6 +331,27 @@ img {
 .button:hover {
   box-shadow: 0 8px 32px hsla(18, 95%, 55%, 0.3);
   color: var(--white-color);
+}
+
+.button_link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 0.25rem;
+  color: var(--first-color);
+}
+
+.button_link span {
+  font-weight: var(--font-semi-bold);
+}
+
+.button_link i {
+  font-size: 1.5rem;
+  transition: transform 0.4s;
+}
+
+.button_link:hover i {
+  transform: translateX(0.25rem);
 }
 
 /* ============ About ============ */
