--- a/construction-web/assets/css/style.css
+++ b/construction-web/assets/css/style.css
@@ -355,3 +355,63 @@ img {
 }
 
 /* ============ About ============ */
+.about_container {
+  row-gap: 8rem;
+}
+
+.about_data {
+  text-align: center;
+}
+
+.about_description {
+  margin-bottom: 2rem;
+}
+
+.about_list {
+  text-align: center;
+  grid-template-columns: repeat(2, 130px);
+  justify-content: center;
+  gap: 1.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.about_list-item {
+  display: flex;
+  column-gap: 0.5rem;
+  color: var(--title-color);
+}
+
+.about_list-item i {
+  font-size: 1.25rem;
+  color: var(--first-color);
+}
+
+.about_images {
+  position: relative;
+  justify-self: center;
+}
+
+.about_img-1 {
+  width: 200px;
+  border: 5px solid var(--body-color);
+  position: absolute;
+  top: -5rem;
+  left: 6rem;
+}
+
+.about_img-2 {
+  width: 250px;
+  margin-right: 2.5rem;
+}
+
+/* ============ Services ============ */
+
+/* swiper class */
+
+/* Product  */
+
+/* Contact  */
+
+/* footer  */
+
+/* Scroll bar  */
