--- a/construction-web/assets/css/style.css
+++ b/construction-web/assets/css/style.css
@@ -405,13 +405,311 @@ img {
 }
 
 /* ============ Services ============ */
+.services {
+  position: relative;
+}
+
+.services_container {
+  position: relative;
+  row-gap: 3rem;
+}
+
+.services_data {
+  text-align: center;
+}
+
+.services_description {
+  margin-bottom: 2rem;
+}
+
+.services_card {
+  width: 260px;
+  background-color: var(--container-color);
+  border: 2px solid var(--gray-border);
+  padding: 2rem 1rem 3.5rem;
+  transition: border-color 0.4s;
+}
+
+.services_card:hover {
+  border-color: var(--first-color);
+}
+
+.services_icons {
+  width: 70px;
+  height: 70px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.services_title {
+  font-size: var(--h2-font-size);
+  margin-bottom: 0.5rem;
+}
+
+.services_shape {
+  position: absolute;
+  width: 100%;
+  height: 245px;
+  background-color: var(--black-color);
+  bottom: 0;
+  left: 0;
+}
 
 /* swiper class */
+.swiper {
+  margin-inline: initial;
+  padding-bottom: 4rem;
+}
 
-/* Product  */
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: "";
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  top: initial;
+  bottom: 0;
+  width: 32px;
+  height: 32px;
+  background-color: var(--container-color);
+  box-shadow: 0 2px 8px hsla(255, 8%, 4%, 0.1);
+  border-radius: 50%;
+  font-size: 1.5rem;
+  color: var(--title-color);
+}
+
+.swiper-button-prev {
+  left: calc(50% - 3rem);
+}
+
+.swiper-button-next {
+  right: calc(50% - 3rem);
+}
+
+/* Projects  */
+.projects {
+  background-color: var(--black-color);
+}
+
+.projects .section_title {
+  color: var(--white-color);
+}
+
+.projects_container {
+  padding-block: 1.5rem 3rem;
+}
+
+.projects_card {
+  background-color: var(--container-color);
+  border: 2px solid transparent;
+  background-clip: content-box;
+  transition: border-color 0.4s;
+}
+
+.projects_card:hover {
+  border-color: var(--first-color);
+}
+
+.projects_data {
+  padding: 1.5rem 1rem 3rem;
+}
+
+.projects_title {
+  font-size: var(--h2-font-size);
+  margin-block: 0.5rem;
+}
+
+.projects_date {
+  display: block;
+  font-weight: var(--font-medium);
+  margin-bottom: 1.5rem;
+}
+
+.projects_img {
+  width: 100%;
+}
 
 /* Contact  */
+.contact_container {
+  row-gap: 3rem;
+  padding-block: 1.5rem 3rem;
+}
+
+.contact_img {
+  width: 320px;
+  justify-self: center;
+}
+
+.contact_data {
+  grid-template-columns: 230px;
+  justify-content: center;
+  row-gap: 1.5rem;
+}
+
+.contact_card {
+  background-color: var(--container-color);
+  border: 2px solid var(--gray-border);
+  padding: 1.5rem 2rem;
+  text-align: center;
+  transition: border-color 0.4s;
+}
+
+.contact_card:hover {
+  border-color: var(--first-color);
+}
+
+.contact_icon {
+  width: 48px;
+  height: 48px;
+  background-color: var(--black-color);
+  color: var(--white-color);
+  border-radius: 50%;
+  display: grid;
+  place-content: center;
+  font-size: 2rem;
+  margin: 0 auto 1.25rem;
+}
+
+.contact_title {
+  font-size: var(--h2-font-size);
+  margin-bottom: 0.5rem;
+}
+
+.contact_info {
+  font-style: normal;
+}
+
+.contact_social {
+  display: flex;
+  justify-content: center;
+  column-gap: 1rem;
+}
+
+.contact_social-link {
+  font-size: 1.5rem;
+  color: var(--first-color);
+  transition: transform 0.4s;
+}
+
+.contact_social-link:hover {
+  transform: translateY(-0.25rem);
+}
 
 /* footer  */
+.footer {
+  background-color: var(--black-color);
+  color: var(--text-color-light);
+  padding: 3.5rem 2rem;
+}
+.footer_container {
+  row-gap: 4rem;
+  padding-bottom: 4rem;
+  border-bottom: 1px solid var(--black-border);
+}
+
+.footer_logo {
+  display: inline-flex;
+  align-items: center;
+  column-gap: 0.25rem;
+}
+
+.footer_logo span {
+  color: var(--white-color);
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
+}
+
+.footer_logo i {
+  color: var(--first-color);
+  font-size: 1.5rem;
+}
+
+.footer_description {
+  margin-block: 1rem;
+}
+
+.footer_email,
+.footer_info {
+  font-style: normal;
+}
+
+.footer_content {
+  grid-template-columns: repeat(2, max-content);
+  gap: 4rem 3rem;
+}
+
+.footer_title {
+  font-size: var(--h3-font-size);
+  color: var(--white-color);
+  margin-bottom: 1rem;
+}
+
+.footer_links,
+.footer_list {
+  display: grid;
+  row-gap: 0.5rem;
+}
+
+.footer_link {
+  color: var(--text-color-light);
+  transition: color 0.4s;
+}
+
+.footer_link:hover {
+  color: var(--first-color);
+}
+
+.footer_social {
+  display: flex;
+  column-gap: 1rem;
+}
+
+.footer_social-link {
+  font-size: 1.5rem;
+  color: var(--first-color);
+  transition: transform 0.4s;
+}
+
+.footer_social-link:hover {
+  transform: translateY(-0.25rem);
+}
+
+.footer_copy {
+  display: block;
+  text-align: center;
+  font-size: var(--small-font-size);
+  margin-top: 4rem;
+}
 
 /* Scroll bar  */
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background-color: hsl(255, 5%, 75%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(255, 5%, 65%);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(255, 5%, 55%);
+}
+
+/* scroll up */
+
+/* show scroll up */
+
+/* breakpoints */
+
+/* for small devices */
+
+/* for medium devices */
+
+/* for large devices */
