--- a/interno-tailwind/src/input.css
+++ b/interno-tailwind/src/input.css
@@ -46,3 +46,10 @@ h6 {
 .nav-open {
   @apply h-[350px] p-6;
 }
+
+/* swiper pagination */
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  @apply bg-primary-default;
+}
