--- a/html-css-js-projects/education-web/assets/css/style.css
+++ b/html-css-js-projects/education-web/assets/css/style.css
@@ -128,15 +128,15 @@ nav {
   align-items: center;
 }
 
-nav button {
-  display: none;
-}
-
 .nav_menu {
   display: flex;
   /* justify-content: space-between; */
   align-items: center;
   gap: 4rem;
+}
+
+nav button {
+  display: none;
 }
 
 .nav_menu a {
@@ -172,7 +172,7 @@ nav button {
 /* Categories */
 .categories {
   background: var(--color-bg1);
-  height: 29rem;
+  height: 32rem;
 }
 
 .categories h1 {
@@ -419,4 +419,188 @@ nav button {
   text-align: center;
   padding: 1.5rem 0;
   border-top: 1px solid var(--color-bg2);
+}
+
+/* Media Queries */
+@media screen and (max-width: 1024px) {
+  .container {
+    width: var(--container-width-md);
+  }
+
+  h1 {
+    font-size: 2.2rem;
+  }
+
+  h2 {
+    font-size: 1.7rem;
+  }
+
+  h3 {
+    font-size: 1.4rem;
+  }
+
+  h4 {
+    font-size: 1.2rem;
+  }
+
+  /* navbar */
+  nav button {
+    display: inline-block;
+    background: transparent;
+    font-size: 1.8rem;
+    color: var(--color-white);
+    cursor: pointer;
+    border: none;
+  }
+
+  nav button#close-menu-btn {
+    display: none;
+  }
+
+  .nav_menu {
+    position: fixed;
+    top: 6rem;
+    width: 14rem;
+    right: 5%;
+    flex-direction: column;
+    gap: 0;
+    display: none;
+  }
+
+  .nav_menu li {
+    width: 100%;
+    height: 4rem;
+    animation: animateNav 500ms linear forwards;
+    transform-origin: top right;
+    opacity: 0;
+  }
+
+  .nav_menu li:nth-child(2) {
+    animation-delay: 200ms;
+  }
+
+  .nav_menu li:nth-child(3) {
+    animation-delay: 400ms;
+  }
+
+  .nav_menu li:nth-child(4) {
+    animation-delay: 600ms;
+  }
+
+  @keyframes animateNav {
+    0% {
+      transform: rotateZ(-90deg) rotateX(90deg) scale(0.1);
+    }
+    100% {
+      transform: rotateZ(0) rotateX(0) scale(1);
+      opacity: 1;
+    }
+  }
+
+  .nav_menu li a {
+    background: var(--color-primary);
+    box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    /* padding: 1.5rem; */
+  }
+
+  .nav_menu li a:hover {
+    background: var(--color-bg2);
+    color: var(--color-white);
+  }
+
+  /* hero section */
+  .hero {
+    height: 72vh;
+    margin-bottom: 4rem;
+  }
+
+  .hero_container {
+    gap: 0;
+    padding-bottom: 3rem;
+  }
+
+  /* category section */
+  .categories {
+    height: auto;
+  }
+  .categories_container {
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+  .categories_left {
+    margin-right: 0;
+  }
+
+  /* popular courses */
+  .courses {
+    margin-top: 0;
+  }
+  .course_container {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  /* faqs */
+  .faqs_container {
+    grid-template-columns: 1fr;
+  }
+  .faq {
+    padding: 1.5rem;
+  }
+
+  /* footer */
+  .footer_container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Media Mobile Device */
+@media screen and (max-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  /* navbar */
+  .nav_menu {
+    right: 3%;
+  }
+
+  /* hero */
+  .hero {
+    height: 80vh;
+  }
+  .hero_container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .hero_left {
+    order: 2;
+  }
+  .hero_right {
+    order: 1;
+    margin-bottom: 2rem;
+  }
+
+  /* categories */
+  .categories_right {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  /* popular courses */
+  .course_container {
+    grid-template-columns: 1fr;
+  }
+
+  /* footer */
+  .footer_container {
+    grid-template-columns: 1fr;
+    text-align: center;
+    gap: 2rem;
+  }
+  .footer_socials {
+    justify-content: center;
+  }
 }
